[package]
name = "mocky"
version = "0.1.0"
license = "MIT"
description = "Generate realistic-fake data on the fly"
authors = ["Shady Khalifa <shekohex@gmail.com>"]
repository = "https://github.com/shekohex/mocky.git"
readme = "README.md"
homepage = "https://github.com/shekohex/mocky"
keywords = ["faker", "fake", "mock", "fakeit"]
categories = ["web-programming", "development-tools", "development-tools::testing"]
edition = "2018"

[badges]
travis-ci = { repository = "shekohex/mocky" }

[dependencies]
lazy_static = "1.3.0"
serde = { version = "1.0.90", features = ["derive"] }
smush = { version = "0.1.4", features = ["brotli_support"], default-features = false }
serde_json = "1.0.39"
rand = "0.6.5"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[build-dependencies]
itertools = "0.8.0"
smush = { version = "0.1.4", features = ["brotli_support"], default-features = false }

[features]
default = ["all"]
all = ["address", "company", "date", "lorem", "name", "phone", "system", "localization-en"]
address = []
company = []
date = []
lorem = []
name = []
phone = []
system = []
localization-en = []
localization-fr = []
